# der-pipeline

./: .gitignore  README.md  analyze_result.py  data.example.csv  diagnostics.py  download.py  main.py  pyproject.toml  utils.py
