[project]
name = "der-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "pyannote-audio>=4.0.1",
    "pyannote-metrics>=4.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
